Herencia de clases

--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "code",
    "source": [
     "\n",
-    "from src import acousticLocalizationSim as ac\n",
+    "from src import simulator as ac\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "speaker = ac.acousticLocalizationSim()\n",
